# robot-rodeo-gym

./: .gitignore  CMakeLists.txt  README.md  dependencies.rosinstall  package.xml  packages.apt  plugin.xml  setup.sh
arenas/long_arena/config/: arena_scores.yaml  reset_config.yaml
arenas/long_arena/launch/: start_robot_rodeo_gym.launch
arenas/long_arena/src/: long_obstacle_id_publisher.py
arenas/short_arena/config/: arena_obstacles.yaml  reset_config.yaml
arenas/short_arena/launch/: start_robot_rodeo_gym.launch
arenas/short_arena/src/: short_obstacle_id_publisher.py
arenas/short_arena/world/: robot_rodeo_gym_world.sdf
include/robot_rodeo_gym/: rqt_score.h
launch/: robot_rodeo_gym.launch  start_gazebo.launch  start_marv.launch  teleop.launch
launch/gazebo_bridge/: ground_truth_publisher.launch  lidar_3d.launch
msg/: EntityPose.msg
robots/marv/config/: filters.yaml  reset_config.yaml  rqt_score_config.yaml  xbox_output_mapping.yaml
robots/marv/config/description/: common.yaml  urdf.yaml
robots/marv/config/elevation_mapping/: elevation_map_config.yaml  elevation_mapping_config.yaml
robots/marv/launch/: base.launch  description.launch  elevation_mapping.launch  flipper_controllers.launch  lidar_3d_filter.launch  rqt_score.launch  sdf_description.launch  xbox_teleop.launch
robots/marv/meshes/: marv_top_box.dae
robots/marv/scripts/: marv_rqt_score
robots/marv/sdf/: print_robot_sdf  replace_string.py
robots/marv/src/: distance_from_ground.cpp  flipper_control_plugin.cpp  reset_robot.cpp  rqt_score.cpp
robots/marv/ui/: rqt_score.ui
robots/marv/urdf/: basler_cameras.xacro  boson_thermocam.xacro  bumper.xacro  direction_lidar.xacro  marv.xacro  mobilicom.xacro  mote_deployer.xacro  ouster_lidar.xacro  print_robot_urdf  tfmini_plus_lidar.xacro  utils.xacro
setup/: package.xml
src/: area_id_publisher.py  crop_point_cloud.cpp  ground_truth_publisher.cpp  rqt_score.cpp  set_camera_follow.cpp  set_entity_pose.cpp
srv/: SetCameraFollow.srv  SetEntityPose.srv
ui/: rqt_score.ui
worlds/: robot_rodeo_gym_world.sdf
