<?xml version="1.0"?>
<package format="2">
  <name>robot_rodeo_gym</name>
  <version>0.0.1</version>
  <description>
    Robot Rodeo Gym
  </description>

  <author email="cihalval@fel.cvut.cz">Valentyn Cihala</author>
  <maintainer email="cihalval@fel.cvut.cz">Valentyn Cihala</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>message_generation</depend>
  <depend>message_runtime</depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>gazebo_plugins</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_ros_control</depend>

</package>
