<?xml version="1.0"?>
<package format="2">
  <name>robot_rodeo_gym</name>
  <version>0.0.1</version>
  <description>
    Robot Rodeo Gym
  </description>

  <author email="cihalval@fel.cvut.cz">Valentyn Cihala</author>
  <maintainer email="cihalval@fel.cvut.cz">Valentyn Cihala</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>message_generation</depend>
  <depend>message_runtime</depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>gazebo_plugins</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_ros_control</depend>
  <depend>rqt_gui</depend>
  <depend>rqt_gui_cpp</depend>
  <depend>grid_map_msgs</depend>
  <depend>grid_map_pcl</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>eigen_conversions</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
